--- a/PDF/english.html
+++ b/PDF/english.html
@@ -6,38 +6,55 @@
   <title>単語テストなど</title>
 </head>
 <body>
-  <p><a href="./wordstest1.pdf">単語テスト第1回</a> <a href="./wordstest1-a.pdf">解答</a></p>
-  <p><a href="./wordstest2.pdf">単語テスト第2回</a> <a href="./wordstest2-a.pdf">解答</a></p>
-  <p><a href="./wordstest3.pdf">単語テスト第3回</a> <a href="./wordstest3-a.pdf">解答</a></p>
-  <p><a href="./wordstest4.pdf">単語テスト第4回</a> <a href="./wordstest4-a.pdf">解答</a></p>
-  <p><a href="./wordstest5.pdf">単語テスト第5回</a> <a href="./wordstest5-a.pdf">解答</a></p>
-  <p><a href="./wordstest6.pdf">単語テスト第6回</a> <a href="./wordstest6-a.pdf">解答</a></p>
-  <p><a href="./wordstest7.pdf">単語テスト第7回</a> <a href="./wordstest7-a.pdf">解答</a></p>
-  <p><a href="./wordstest8.pdf">単語テスト第8回</a> <a href="./wordstest8-a.pdf">解答</a></p>
-  <p><a href="./wordstest9.pdf">単語テスト第9回</a> <a href="./wordstest9-a.pdf">解答</a></p>
-  <p><a href="./wordstest10.pdf">単語テスト第10回</a> <a href="./wordstest10-a.pdf">解答</a></p>
-  <p><a href="./wordstest11.pdf">単語テスト第11回</a> <a href="./wordstest11-a.pdf">解答</a></p>
-  <p><a href="./wordstest12.pdf">単語テスト第12回</a> <a href="./wordstest12-a.pdf">解答</a></p>
-  <p><a href="./wordstest13.pdf">単語テスト第13回</a> <a href="./wordstest13-a.pdf">解答</a></p>
-  <p><a href="./wordstest14.pdf">単語テスト第14回</a> <a href="./wordstest14-a.pdf">解答</a></p><br>
+  <p>英単語テストや英熟語テストの過去問などを閲覧できます。
+    解答を何かに書いてLINEで送ってもらえれば採点します。
+    二次配布は許可しますが、三次配布は原則禁止します。</p>
 
-
-  <p><a href="./phrasestest1.pdf">熟語テスト第1回</a> <a href="./phrasestest1-a.pdf">解答</a></p>
-  <p><a href="./phrasestest2.pdf">熟語テスト第2回</a> <a href="./phrasestest2-a.pdf">解答</a></p>
-  <p><a href="./phrasestest3.pdf">熟語テスト第3回</a> <a href="./phrasestest3-a.pdf">解答</a></p><br>
-
-  <p><a href="./wordscheck1.pdf">単語チェック第1回</a></p>
-  <p><a href="./wordscheck2.pdf">単語チェック第2回</a></p>
-  <p><a href="./wordscheck3.pdf">単語チェック第3回</a></p>
-  <p><a href="./wordscheck4.pdf">単語チェック第4回</a></p>
-  <p><a href="./wordscheck5.pdf">単語チェック第5回</a></p>
-  <p><a href="./wordscheck6.pdf">単語チェック第6回</a></p>
-  <p><a href="./wordscheck7.pdf">単語チェック第7回</a></p>
-  <p><a href="./wordscheck8.pdf">単語チェック第8回</a></p>
-  <p><a href="./wordscheck9.pdf">単語チェック第9回</a></p>
-  <p><a href="./wordscheck10.pdf">単語チェック第10回</a></p>
-  <p><a href="./wordscheck11.pdf">単語チェック第11回</a></p>
-  <p><a href="./wordscheck12.pdf">単語チェック第12回</a></p>
-  
+  <h3>英単語テスト（駿台文庫 システム英単語 5訂版  準拠）</h3>
+  <ul>
+    <li>単語テスト第1回 <a href="./wordstest1.pdf">問題</a> <a href="./wordstest1-a.pdf">解答</a></li>
+    <li>単語テスト第2回 <a href="./wordstest2.pdf">問題</a> <a href="./wordstest2-a.pdf">解答</a></li>
+    <li>単語テスト第3回 <a href="./wordstest3.pdf">問題</a> <a href="./wordstest3-a.pdf">解答</a></li>
+    <li>単語テスト第4回 <a href="./wordstest4.pdf">問題</a> <a href="./wordstest4-a.pdf">解答</a></li>
+    <li>単語テスト第5回 <a href="./wordstest5.pdf">問題</a> <a href="./wordstest5-a.pdf">解答</a></li>
+    <li>単語テスト第6回 <a href="./wordstest6.pdf">問題</a> <a href="./wordstest6-a.pdf">解答</a></li>
+    <li>単語テスト第7回 <a href="./wordstest7.pdf">問題</a> <a href="./wordstest7-a.pdf">解答</a></li>
+    <li>単語テスト第8回 <a href="./wordstest8.pdf">問題</a> <a href="./wordstest8-a.pdf">解答</a></li>
+    <li>単語テスト第9回 <a href="./wordstest9.pdf">問題</a> <a href="./wordstest9-a.pdf">解答</a></li>
+    <li>単語テスト第10回 <a href="./wordstest10.pdf">問題</a> <a href="./wordstest10-a.pdf">解答</a></li>
+    <li>単語テスト第11回 <a href="./wordstest11.pdf">問題</a> <a href="./wordstest11-a.pdf">解答</a></li>
+    <li>単語テスト第12回 <a href="./wordstest12.pdf">問題</a> <a href="./wordstest12-a.pdf">解答</a></li>
+    <li>単語テスト第13回 <a href="./wordstest13.pdf">問題</a> <a href="./wordstest13-a.pdf">解答</a></li>
+    <li>単語テスト第14回 <a href="./wordstest14.pdf">問題</a> <a href="./wordstest14-a.pdf">解答</a></li>
+  </ul>
+  <h3>英熟語テスト（旺文社 英熟語ターゲット1000[5訂版]  準拠）</h3>
+  <ul>
+    <li>熟語テスト第1回 <a href="./phrasestest1.pdf">問題</a> <a href="./phrasestest1-a.pdf">解答</a></li>
+    <li>熟語テスト第2回 <a href="./phrasestest2.pdf">問題</a> <a href="./phrasestest2-a.pdf">解答</a></li>
+    <li>熟語テスト第3回 <a href="./phrasestest3.pdf">問題</a> <a href="./phrasestest3-a.pdf">解答</a></li>
+  </ul>
+  <h3>単語帳</h3>
+  <ul>
+    <li><a href="./wordscheck1.pdf">単語チェック第1回</a></li>
+    <li><a href="./wordscheck2.pdf">単語チェック第2回</a></li>
+    <li><a href="./wordscheck3.pdf">単語チェック第3回</a></li>
+    <li><a href="./wordscheck4.pdf">単語チェック第4回</a></li>
+    <li><a href="./wordscheck5.pdf">単語チェック第5回</a></li>
+    <li><a href="./wordscheck6.pdf">単語チェック第6回</a></li>
+    <li><a href="./wordscheck7.pdf">単語チェック第7回</a></li>
+    <li><a href="./wordscheck8.pdf">単語チェック第8回</a></li>
+    <li><a href="./wordscheck9.pdf">単語チェック第9回</a></li>
+    <li><a href="./wordscheck10.pdf">単語チェック第10回</a></li>
+    <li><a href="./wordscheck11.pdf">単語チェック第11回</a></li>
+    <li><a href="./wordscheck12.pdf">単語チェック第12回</a></li>
+  </ul>
+  <h3>その他</h3>
+  <ul>
+    <li><a href="./periodic_table.pdf">周期表</a></li>
+    <li><a href="./table.pdf">数表</a></li>
+    <li><a href="./frog.mp4">謎動画1（シャドーガエル）</a></li>
+    <li><a href="./den.mp4">謎動画2（コンデンサー）</a></li>
+    <li><a href="./archive/main.html">旧クイズラリー（アーカイブ）</a></li>
+  </ul>
 </body>
 </html>
