--- a/PDF/english.html
+++ b/PDF/english.html
@@ -53,7 +53,7 @@
     <li><a href="./periodic_table.pdf">周期表</a></li>
     <li><a href="./table.pdf">数表</a></li>
     <li><a href="./frog.mp4">謎動画1（シャドーガエル）</a></li>
-    <li><a href="./den.mp4">謎動画2（コンデンサー）</a></li>
+    <li><a href="./capacitor.mp4">謎動画2（コンデンサー）</a></li>
     <li><a href="./archive/main.html">旧クイズラリー（アーカイブ）</a></li>
   </ul>
 </body>
