--- a/PDF/english.html
+++ b/PDF/english.html
@@ -8,7 +8,7 @@
 <body>
   <p>英単語テストや英熟語テストの過去問などを閲覧できます。
     解答を何かに書いてLINEで送ってもらえれば採点します。
-    二次配布は許可しますが、三次配布は原則禁止します。</p>
+    二次配布は構いませんが、三次配布は原則禁止します。</p>
 
   <h3>英単語テスト（駿台文庫 システム英単語 5訂版  準拠）</h3>
   <ul>
@@ -56,5 +56,8 @@
     <li><a href="./capacitor.mp4">謎動画2（コンデンサー）</a></li>
     <li><a href="./archive/main.html">旧クイズラリー（アーカイブ）</a></li>
   </ul>
+  <div>
+    広告： 使用済み／不要なマンガン乾電池、酸化銀ボタン電池、コイン型リチウム一次電池募集！ショートや電解液の漏出が起きないようにご持参ください。
+  </div>
 </body>
 </html>
