--- a/PDF/english.html
+++ b/PDF/english.html
@@ -47,6 +47,7 @@
     <li><a href="./wordscheck10.pdf">単語チェック第10回</a></li>
     <li><a href="./wordscheck11.pdf">単語チェック第11回</a></li>
     <li><a href="./wordscheck12.pdf">単語チェック第12回</a></li>
+    <li><a href="./wordscheck13.pdf">単語チェック第13回</a></li>
   </ul>
   <h3>その他</h3>
   <ul>
