--- a/PDF/english.html
+++ b/PDF/english.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <p>英単語テストや英熟語テストの過去問などを閲覧できます。
-    解答を何かに書いてLINEで送ってもらえれば採点します。
+    解答を何かに書いてLINEなどで送ってもらえれば採点します。
     二次配布は構いませんが、三次配布は原則禁止します。</p>
 
   <h3>英単語テスト（駿台文庫 システム英単語 5訂版  準拠）</h3>
@@ -26,6 +26,7 @@
     <li>単語テスト第12回 <a href="./wordstest12.pdf">問題</a> <a href="./wordstest12-a.pdf">解答</a></li>
     <li>単語テスト第13回 <a href="./wordstest13.pdf">問題</a> <a href="./wordstest13-a.pdf">解答</a></li>
     <li>単語テスト第14回 <a href="./wordstest14.pdf">問題</a> <a href="./wordstest14-a.pdf">解答</a></li>
+    <li>単語テスト第14回 <a href="./wordstest15.pdf">問題</a> <a href="./wordstest15-a.pdf">解答</a></li>
   </ul>
   <h3>英熟語テスト（旺文社 英熟語ターゲット1000[5訂版]  準拠）</h3>
   <ul>
@@ -33,7 +34,7 @@
     <li>熟語テスト第2回 <a href="./phrasestest2.pdf">問題</a> <a href="./phrasestest2-a.pdf">解答</a></li>
     <li>熟語テスト第3回 <a href="./phrasestest3.pdf">問題</a> <a href="./phrasestest3-a.pdf">解答</a></li>
   </ul>
-  <h3>単語帳</h3>
+  <h3>単語帳(単語番号のリスト(314,1592,653,589,793, ...みたいな感じ)をLINEなどで送ってもらえればそれらを抽出した単語帳を作れます)</h3>
   <ul>
     <li><a href="./wordscheck1.pdf">単語チェック第1回</a></li>
     <li><a href="./wordscheck2.pdf">単語チェック第2回</a></li>
