--- a/PDF/english.html
+++ b/PDF/english.html
@@ -34,7 +34,8 @@
     <li>熟語テスト第2回 <a href="./phrasestest2.pdf">問題</a> <a href="./phrasestest2-a.pdf">解答</a></li>
     <li>熟語テスト第3回 <a href="./phrasestest3.pdf">問題</a> <a href="./phrasestest3-a.pdf">解答</a></li>
   </ul>
-  <h3>単語帳(単語番号のリスト(314,1592,653,589,793, ...みたいな感じ)をLINEなどで送ってもらえればそれらを抽出した単語帳を作れます)</h3>
+  <h3>単語帳</h3>
+  <p>単語番号のリスト(314,1592,653,589,793, ...みたいな感じ)をLINEなどで送ってもらえればそれらを抽出した単語帳を作れます</p>
   <ul>
     <li><a href="./wordscheck1.pdf">単語チェック第1回</a></li>
     <li><a href="./wordscheck2.pdf">単語チェック第2回</a></li>
