--- a/PDF/english.html
+++ b/PDF/english.html
@@ -50,6 +50,8 @@
     <li><a href="./wordscheck11.pdf">単語チェック第11回</a></li>
     <li><a href="./wordscheck12.pdf">単語チェック第12回</a></li>
     <li><a href="./wordscheck13.pdf">単語チェック第13回</a></li>
+    <li><a href="./wordscheck14.pdf">単語チェック第14回</a></li>
+    <!-- <li><a href="./wordscheck15.pdf">単語チェック第15回</a></li> -->
   </ul>
   <h3>その他</h3>
   <ul>
