--- a/PDF/english.html
+++ b/PDF/english.html
@@ -51,7 +51,11 @@
     <li><a href="./wordscheck12.pdf">単語チェック第12回</a></li>
     <li><a href="./wordscheck13.pdf">単語チェック第13回</a></li>
     <li><a href="./wordscheck14.pdf">単語チェック第14回</a></li>
-    <!-- <li><a href="./wordscheck15.pdf">単語チェック第15回</a></li> -->
+    <li><a href="./wordscheck15.pdf">単語チェック第15回</a></li>
+    <li><a href="./wordscheck16.pdf">単語チェック第15回</a></li>
+    <li><a href="./wordscheck17.pdf">単語チェック第16回</a></li>
+    <li><a href="./wordscheck18.pdf">単語チェック第17回</a></li>
+    <li><a href="./wordscheck19.pdf">単語チェック第18回</a></li>
   </ul>
   <h3>その他</h3>
   <ul>
