--- a/PDF/english.html
+++ b/PDF/english.html
@@ -33,6 +33,7 @@
     <li>熟語テスト第1回 <a href="./phrasestest1.pdf">問題</a> <a href="./phrasestest1-a.pdf">解答</a></li>
     <li>熟語テスト第2回 <a href="./phrasestest2.pdf">問題</a> <a href="./phrasestest2-a.pdf">解答</a></li>
     <li>熟語テスト第3回 <a href="./phrasestest3.pdf">問題</a> <a href="./phrasestest3-a.pdf">解答</a></li>
+    <li>熟語テスト第4回 <a href="./phrasestest4.pdf">問題</a> <a href="./phrasestest4-a.pdf">解答</a></li>
   </ul>
   <h3>単語帳</h3>
   <p>単語番号のリスト(314,1592,653,589,793, ...みたいな感じ)をLINEなどで送ってもらえればそれらを抽出した単語帳を作れます</p>
