--- a/PDF/english.html
+++ b/PDF/english.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
-  <title>単語テストなど</title>
+  <title>ものおきば</title>
 </head>
 <body>
   <p>英単語テストや英熟語テストの過去問などを閲覧できます。
@@ -28,6 +28,9 @@
     <li>単語テスト第14回 <a href="./wordstest14.pdf">問題</a> <a href="./wordstest14-a.pdf">解答</a></li>
     <li>単語テスト第15回 <a href="./wordstest15.pdf">問題</a> <a href="./wordstest15-a.pdf">解答</a></li>
     <li>単語テスト第16回 <a href="./wordstest16.pdf">問題</a> <a href="./wordstest16-a.pdf">解答</a></li>
+    <li>単語テスト第17回 <a href="./wordstest17.pdf">問題</a> <a href="./wordstest17-a.pdf">解答</a></li>
+    <!-- <li>単語テスト第18回 <a href="./wordstest18.pdf">問題</a> <a href="./wordstest18-a.pdf">解答</a></li> -->
+    <!-- <li>単語テスト第19回 <a href="./wordstest19.pdf">問題</a> <a href="./wordstest19-a.pdf">解答</a></li> -->
   </ul>
   <h3>英熟語テスト（旺文社 英熟語ターゲット1000[5訂版]  準拠）</h3>
   <ul>
@@ -36,6 +39,7 @@
     <li>熟語テスト第3回 <a href="./phrasestest3.pdf">問題</a> <a href="./phrasestest3-a.pdf">解答</a></li>
     <li>熟語テスト第4回 <a href="./phrasestest4.pdf">問題</a> <a href="./phrasestest4-a.pdf">解答</a></li>
     <li>熟語テスト第5回 <a href="./phrasestest5.pdf">問題</a> <a href="./phrasestest5-a.pdf">解答</a></li>
+    <li>熟語テスト第6回 <a href="./phrasestest6.pdf">問題</a> <a href="./phrasestest6-a.pdf">解答</a></li>
   </ul>
   <h3>単語帳</h3>
   <p>単語番号のリスト(314,1592,653,589,793, ...みたいな感じ)をLINEなどで送ってもらえればそれらを抽出した単語帳を作れます</p>
@@ -62,6 +66,8 @@
   </ul>
   <h3>その他</h3>
   <ul>
+    <li>クソ問の風（2025年3月以降順次公開予定）</li>
+    <li>実験動画（詳細未定）</li>
     <li><a href="./periodic_table.pdf">周期表</a></li>
     <li><a href="./table.pdf">数表</a></li>
     <li><a href="./lettering.pdf">レタリング（英字）</a></li>
