--- a/PDF/english.html
+++ b/PDF/english.html
@@ -6,7 +6,9 @@
   <title>ものおきば</title>
 </head>
 <body>
-  <p>サイト移転しました。ブックマークなどの変更をお願いします。</p>
+  <p>サイト移転しました。ブックマークなどの変更をお願いします。
+  （このページは3月末に消します）</p>
+  <p>移転先↓</p>
   <p><a href="https://ankaidan.github.io/u/index.html">https://ankaidan.github.io/u/index.html</a></p>
 </body>
 </html>
